--- a/ASSIGNMENT_3/question_8.html
+++ b/ASSIGNMENT_3/question_8.html
@@ -3,31 +3,89 @@
   <head>
     <link rel="stylesheet" href="question_8.css">
     <meta charset="utf-8">
-    <title>PHOTOGRAPHY SITE</title>
+    <title>PHOTOGRAPHY WEBSITE</title>
   </head>
   <body>
     <div id="content">
 
-      <div class="one"><h1>envato<span>market<span></h1></div>
+      <div class="one" id="home"><h1>envato<span>market<span></h1>
+        <nav>
+          <ul class="social">
+            <li class="wert">Connect with us on:</li>
+            <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/?lang=en" target="_blank">Twitter</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank">Linkedin</a></li>
+          </ul>
+        </nav></div>
       <div class="two"><img src="photo_1.jpg" alt="base">
         <div class="welcome"><h2><a href="#jump">Click here to see photographs</a></h2></div>
       </div>
 
       <div class="three" id="jump"><h2>DIGITAL MAGAZINE STARTS NOW..</h2></div>
-      <div class="four"><a href="#jump"><img src="photo_2.jpg" alt="first"></a></div>
-      <div class="five"><a href="#jump"><img src="photo_4.jpg" alt="second"></a></div>
-      <div class="six"><a href="#jump"><img src="photo_3.jpg" alt="third"></a></div>
-      <div class="seven"><a href="#jump"><img src="photo_5.jpg" alt="fourth"></a></div>
-      <div class="eight"><a href="#jump"><img src="photo_6.jpg" alt="fifth"></a></div>
-      <div class="nine"><a href="#jump"><img src="photo_7.jpg" alt="sixth"></a></div>
-      <div class="ten"><a href="#jump"><img src="photo_8.jpg" alt="seven"></a></div>
-      <div class="eleven"><a href="#jump"><img src="photo_9.jpg" alt="eight"></a></div>
-      <div class="twelve"><a href="#jump"><img src="photo_10.jpg" alt="nine"></a></div>
-      <div class="thirteen">
-        Contact us:<br>
-        Email or call us to set up a consult<br>
-        Email: contact@creative.agencies<br>
-        Phone: (751) 001-3215</div>
+      <div class="four"><a href="#jump"><img src="photo_2.jpg" alt="first" class="image">
+        <div class="a">
+       <div class="text">MAGAZINE IMAGE 1</div>
+     </div>
+     </a>
+   </div>
+      <div class="five"><a href="#jump"><img src="photo_4.jpg" alt="second" class="image1">
+        <div class="b">
+       <div class="text1">MAGAZINE IMAGE 2</div>
+     </div>
+     </a>
+      </div>
+      <div class="six"><a href="#jump"><img src="photo_3.jpg" alt="third" class="image2">
+        <div class="c">
+       <div class="text2">MAGAZINE IMAGE 3</div>
+     </div>
+     </a>
+   </div>
+      <div class="seven"><a href="#jump"><img src="photo_5.jpg" alt="fourth" class="image3">
+        <div class="d">
+       <div class="text3">MAGAZINE IMAGE 4</div>
+     </div>
+     </a>
+   </div>
+      <div class="eight"><a href="#jump"><img src="photo_6.jpg" alt="fifth" class="image4">
+        <div class="e">
+       <div class="text4">MAGAZINE IMAGE 5</div>
+     </div>
+     </a>
+   </div>
+      <div class="nine"><a href="#jump"><img src="photo_7.jpg" alt="sixth" class="image5">
+        <div class="f">
+       <div class="text5">MAGAZINE IMAGE 6</div>
+     </div>
+     </a>
+   </div>
+      <div class="ten"><a href="#jump"><img src="photo_8.jpg" alt="seven" class="image6">
+        <div class="g">
+       <div class="text6">MAGAZINE IMAGE 7</div>
+     </div>
+     </a>
+   </div>
+      <div class="eleven"><a href="#jump"><img src="photo_9.jpg" alt="eight"class="image7">
+        <div class="h">
+     <div class="text7">MAGAZINE IMAGE 8</div>
+   </div>
+   </a>
+ </div>
+      <div class="twelve"><a href="#jump"><img src="photo_10.jpg" alt="nine" class="image9">
+        <div class="i">
+       <div class="text8">MAGAZINE IMAGE 9</div>
+     </div>
+     </a>
+   </div>
+      <div class="thirteen"> Get in touch with us regarding queries:<nav>
+          <ul class="social">
+            <li class="wert"></li>
+            <li><a href="contact@creative.agencies" target="_self">Email-id</a></li>
+            <li><a href="(751) 001-3215" target="_self">Phone No.</a></li>
+            <li><a href="#home" target="_self">Home Page</a></li>
+          </ul>
+        </nav>
+      </div>
 
       </div>
 
